force-app/main/default/objects/ssot__PartyPhilanthropicOccurrence__dlm/fields/ssot__EstimatedValueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__EstimatedValueAmount__c</fullName>
    <label>Estimated Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EstimatedValueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>