force-app/main/default/objects/ssot__PartyPhilanthropicOccurrence__dlm/fields/ssot__OtherSourceName__c.field-meta.xml
<CustomField>
    <fullName>ssot__OtherSourceName__c</fullName>
    <label>Other Source</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OtherSourceName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>