force-app/main/default/objects/ssot__PartyPhilanthropicOccurrence__dlm/fields/ssot__rel_1731658745479_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658745479_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyPhilanthropicOccurrence_Related_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>PartyPhilanthropicOccurrence_Related_rel</relationshipLabel>
    <relationshipName>rel_1731658745479_end</relationshipName>
    <type>Lookup</type>
</CustomField>