force-app/main/default/objects/ssot__PartyPhilanthropicOccurrence__dlm/fields/ssot__ResearchType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResearchType__c</fullName>
    <label>Research Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResearchType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>