force-app/main/default/objects/ssot__PartyPhilanthropicOccurrence__dlm/fields/ssot__SourceType__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceType__c</fullName>
    <label>Source Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>